# Web-Scrapper

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
data/base/: Consolidated List of Activities.xlsx
data/fetched/: meydan_api_activities.csv
data/output/: meydan_reconciliation_audit_20260520_113527.xlsx  meydan_reconciliation_audit_20260520_115439.xlsx
scripts/: fetch_meydan_api.py  load_consolidated.py  run_reconciliation.py  test_activity_match.py
sql/: 001_multi_jurisdiction_schema.sql
src/activity_sync/: __init__.py  consolidated_loader.py  jurisdiction_reconciler.py  meydan_api_client.py  openai_service.py  settings.py  supabase_repository.py  text_utils.py
