[project]
name = "web-scrapper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "openai>=2.36.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "playwright>=1.59.0",
    "python-dotenv>=1.2.2",
    "rapidfuzz>=3.14.5",
    "supabase>=2.30.0",
]
